# OpenFSL

./: .codacy.yml  .gitignore  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  _r_e_a_d_m_e_8md.html  alloccluster_8cpp.html  alloccluster_8cpp__incl.map  alloccluster_8cpp__incl.md5  alloccluster_8cpp_source.html  annotated.html  annotated_dup.js  autobuild.sh  blockdevice_8cpp.html  blockdevice_8cpp__incl.map  blockdevice_8cpp__incl.md5  blockdevice_8cpp_source.html  blockdevice_8h.html  blockdevice_8h__dep__incl.map  blockdevice_8h__dep__incl.md5  blockdevice_8h__incl.map  blockdevice_8h__incl.md5  blockdevice_8h_source.html  bootcode_8c.html  bootcode_8c.js  bootcode_8c_source.html  bootcode_8h.html  bootcode_8h.js  bootcode_8h__dep__incl.map  bootcode_8h__dep__incl.md5  bootcode_8h_source.html  bpb_8cpp.html  bpb_8cpp__incl.map  bpb_8cpp__incl.md5  bpb_8cpp_source.html  build.sh  cache_8cpp.html  (+3081 more)
.circleci/: config.yml
buildutils/: CMakeLists.txt  bintoc.py
cmakeModules/: ConfigBuildDirectory.cmake  ConfigTargetOptions.cmake  ConfigTest.cmake  CopyLib.cmake  FindZIP.cmake  ListSubDir.cmake
cmakeScript/: ConfigureVersion.cmake  MatchCopy.cmake
doc/: plan.md
etc/: licenseheader.txt
fs/: CMakeLists.txt  PackageConfig.cmake
fs/fat32/: CMakeLists.txt  ModuleConfig.cmake  PackageConfig.cmake
fs/fat32/include/openfsl/fat32/: fat32.h  fat32_structures.h  fs_fat32.h
fs/fat32/include/openfsl/fat32/internal/: cache.h  clusterchain.h  entry.h  file.h  options.h  specialsector.h  time.h
fs/fat32/src/: alloccluster.cpp  bpb.cpp  cache.cpp  charcoding.cpp  chdir.cpp  checkempty.cpp  checksum.cpp  classgeneral.cpp  createentry.cpp  fatarea.cpp  file_classgeneral.cpp  file_flush.cpp  file_getter_setter.cpp  file_openclose.cpp  file_read.cpp  file_seek.cpp  file_tell.cpp  file_write.cpp  fileinfo.cpp  filename.cpp  foreachentry.cpp  format.cpp  fsinfo.cpp  getdirlist.cpp  getentryinfo.cpp  getter_setter.cpp  initialize.cpp  linkedcluster_classgeneral.cpp  linkedcluster_cluster.cpp  linkedcluster_fetch.cpp  linkedcluster_flush.cpp  linkedcluster_internal.cpp  linkedcluster_read.cpp  linkedcluster_util.cpp  linkedcluster_write.cpp  listdir.cpp  makedir.cpp  makefile.cpp  mkdir.cpp  move.cpp  (+17 more)
fs/fat32/src/cache/: cache.cpp  cache_new.cpp
fs/fat32/src/clusterchain/: classgeneral.cpp  cluster.cpp  fetch.cpp  flush.cpp  read.cpp  utils.cpp  write.cpp
fs/fat32/src/controller/: directory.cpp  entry.cpp  file.cpp  volume.cpp
fs/fat32/src/entry/: createdir.cpp  createentry.cpp  createfile.cpp  foreachentry.cpp  getentryinfo.cpp  removedir.cpp  removeentry.cpp  removefile.cpp  setentryinfo.cpp
fs/fat32/src/file/: classgeneral.cpp  flush.cpp  openclose.cpp  read.cpp  seek.cpp  tell.cpp  write.cpp
fs/fat32/src/time/: time.cpp
fs/fat32/tests/: CMakeLists.txt  EXAMPLE.cpp
fs/fat32/tests/fat32_gpt_test/: CMakeLists.txt  main.cpp
fs/fat32/tests/fat32_mbr_test/: CMakeLists.txt  main.cpp
fs/fat32/tests/fat32_non512_test/: CMakeLists.txt  main.cpp
fs/fat32/tests/fat32_test/: CMakeLists.txt  main.cpp
fs/fat32/tests/ofsl_fat32/: CMakeLists.txt  main.cpp
fs/iso9660/: CMakeLists.txt  ModuleConfig.cmake
fs/iso9660/include/openfsl/iso9660/: fs_iso9660.h  iso9660_structures.h
fs/iso9660/src/: classgeneral.cpp  initialize.cpp
fs/iso9660/tests/: CMakeLists.txt
fs/ntfs/: CMakeLists.txt  ModuleConfig.cmake  PackageConfig.cmake
fs/ntfs/include/openfsl/ntfs/: fs_ntfs.h  ntfs_structures.h
fs/ntfs/src/: charcoding.cpp  classgeneral.cpp  clusterrun.cpp  initialize.cpp
fs/ntfs/tests/: CMakeLists.txt
sample/: CMakeLists.txt
sample/cli/include/: header.h
sample/cli/src/: cdfs.cpp  fat32.cpp  main.cpp  ntfs.cpp  utils.cpp  vars.cpp
sample/gui/include/: Application.h  EditorFrame.h  FAT32Command.h  FAT32FileCommand.h  FSCommand.h  FileCommand.h  FileInfo.h  MainFrame.h  ids.h  utils.h
sample/gui/src/: Application.cpp  Application.design.cpp  EditorFrame.cpp  EditorFrame.design.cpp  FAT32Command.cpp  FAT32FileCommand.cpp  FSCommand.cpp  FileCommand.cpp  MainFrame.cpp  MainFrame.design.cpp  utils.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+121 more)
tests/: CMakeLists.txt  __EXAMPLE__.cpp  build.sh
tests/DummyOS/: .gitignore
tests/DummyOS/boot/amd64/: Makefile
tests/DummyOS/boot/amd64/dep/: dependency.dep  dependency64.dep
tests/DummyOS/boot/amd64/ldscripts/: i686-elf.x  x86_64-elf.x
tests/DummyOS/boot/amd64/src/: main.c  page.c  page.h  s1boot.asm  s2boot.asm  string.c  string.h  swamd64.asm  swamd64.h  type.h
tests/DummyOS/boot/amd64/src/64bit/: driver_ata_pio.c  driver_ata_pio.h  elf.h  io.c  io.h  main.c  s2boot64.asm  string.c  string.h  type.h
tests/DummyOS/boot/amd64/stage3/: Makefile
tests/DummyOS/boot/amd64/stage3/dep/: dependency.dep
tests/DummyOS/boot/amd64/stage3/ldscripts/: x86_64-elf.x
tests/DummyOS/boot/amd64/stage3/src/: drivers.h  fat.h  ioatapio.c  iops2kbd.c  iotty.c  main.c  memory.c  memory.h  port.c  port.h  type.h
tests/DummyOS/buildutils/: build.sh
tests/DummyOS/buildutils/bsmerge/: Makefile  main.c
tests/base_test/: CMakeLists.txt  main.cpp
tests/fat32/: main.cpp  test
tests/fat32_chdir/: CMakeLists.txt  fat32_chdir.cpp  main.cpp
tests/fat32_getdirlist/: CMakeLists.txt  fat32_getdirlist.cpp  main.cpp
tests/fat32_getfileinformation/: CMakeLists.txt  fat32_getfileinformation.cpp  main.cpp
tests/fat32_init/: CMakeLists.txt  fat32_init.cpp  main.cpp
tests/fat32_mkdir/: CMakeLists.txt  fat32_mkdir.cpp  main.cpp
tests/fat32_openclosefile/: CMakeLists.txt  fat32_openclosefile.cpp  main.cpp
tests/fat32_seekfile/: CMakeLists.txt  fat32_seekfile.cpp  main.cpp
tests/ofsl_base/: CMakeLists.txt  main.cpp
tests/ofsl_fat32/: CMakeLists.txt  main.cpp
(+1417 files in other folders)
